<resources>
    <string name="app_name">Good Evening</string>
    <string name="success">Success</string>
    <string name="film_poster_card_view">film_poster</string>
    <string name="test_description">FILM_TEST_DESCRIPTION: omomomomommomomomomomoomommomommomomomommooommomomomomomo</string>
    <string name="favorite">favorite</string>
    <string name="watched">watched</string>
    <string name="share">share</string>
    <string name="watch_later">watch later</string>
    <string name="test_type_film">default</string>
    <string name="menu_title_adult">adult</string>
    <string name="adult">adult</string>
    <string name="child">child</string>
    <string name="adult_or_child">18+</string>
    <string name="see_more">more</string>
    <string name="film_name">DEFAULT</string>
    <string name="cinema_map">cinema_map</string>
</resources>