<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/film_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_name"
            android:text="DEFAULT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/film_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:textSize="@dimen/rating_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="false"
            android:layout_margin="5dp"
            android:text="10.0"/>

        <Button
            android:id="@+id/film_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEFAULT"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/film_rating"
            android:clickable="false"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/film_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEFAULT"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toEndOf="@id/film_year"
            app:layout_constraintTop_toBottomOf="@id/film_rating"
            android:clickable="false"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/film_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEFAULT"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toEndOf="@id/film_time"
            app:layout_constraintTop_toBottomOf="@id/film_rating"
            android:clickable="false"
            android:layout_margin="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/film_description"
        layout="@layout/film_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/favorite_film"
            android:layout_width="@dimen/item_menu_size"
            android:layout_height="@dimen/item_menu_size"
            android:src="@drawable/favorite"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/watched_film"
            app:layout_constraintBottom_toTopOf="@id/favorite_film_text"/>

        <ImageView
            android:id="@+id/watched_film"
            android:layout_width="@dimen/item_menu_size"
            android:layout_height="@dimen/item_menu_size"
            android:src="@drawable/watched"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/favorite_film"
            app:layout_constraintEnd_toStartOf="@+id/watch_later_film"/>

        <ImageView
            android:id="@+id/watch_later_film"
            android:layout_width="@dimen/item_menu_size"
            android:layout_height="@dimen/item_menu_size"
            android:src="@drawable/watch_later"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/watched_film"
            app:layout_constraintEnd_toStartOf="@+id/share_film"/>

        <ImageView
            android:id="@+id/share_film"
            android:layout_width="@dimen/item_menu_size"
            android:layout_height="@dimen/item_menu_size"
            android:src="@drawable/share"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/watch_later_film"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/favorite_film_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/favorite_film"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/watched_film_text"/>

        <TextView
            android:id="@+id/watched_film_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watched"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/watched_film"
            app:layout_constraintStart_toEndOf="@+id/favorite_film_text"
            app:layout_constraintEnd_toStartOf="@+id/watch_later_film_text"/>

        <TextView
            android:id="@+id/watch_later_film_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_later"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/watch_later_film"
            app:layout_constraintStart_toEndOf="@id/watched_film_text"
            app:layout_constraintEnd_toStartOf="@+id/share_film_text"/>

        <TextView
            android:id="@+id/share_film_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/share_film"
            app:layout_constraintStart_toEndOf="@id/watch_later_film_text"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>